test/error/tyConsDouble.dck
%-

tydecl sex = Boy | Girl

tydecl gender = Boy | Girl | NonBinary
